cleanup physics package